--- a/bookProject/src/main/resources/static/css/main/main.css
+++ b/bookProject/src/main/resources/static/css/main/main.css
@@ -1,6 +1,14 @@
 
 
+.mainDiv{
+	width:100%;
+	height:600px;
+}
+
 .main{
+	padding-left:18px;
 	width:1920px;
 	height:858px;
+	padding-top:70px;
+	padding-bottom:70px;
 }
