--- a/bookProject/src/main/resources/templates/main/main.html
+++ b/bookProject/src/main/resources/templates/main/main.html
@@ -1,1 +1,10 @@
-<h1>메인화면</h1>
+
+ <div class="mainDiv bg-dark">
+		test
+ </div>
+ <div class="mainDiv bg-secondary">
+		test
+ </div>
+ <div class="mainDiv bg-info">
+		test
+ </div>  
