--- a/bookProject/src/main/resources/templates/fragments/footer.html
+++ b/bookProject/src/main/resources/templates/fragments/footer.html
@@ -1,6 +1,6 @@
 		
 	<!-- 샘플 footer... -->	
-	<footer class="bg-light text-center text-lg-start">
+	<footer class="bg-light text-center text-lg-start fixed-bottom">
 	  <!-- Copyright -->
 	  <div class="text-center">
 	  	샘플 footer..
