--- a/bookProject/src/main/resources/templates/fragments/header.html
+++ b/bookProject/src/main/resources/templates/fragments/header.html
@@ -8,25 +8,45 @@
         <link rel="stylesheet" type="text/css" href="/lib/bootstrap/css/bootstrap.min.css">
         <link rel="stylesheet" type="text/css" href="/css/main/main.css">
         
+        <!-- 네비게이션바 -->
+<!-- 	   <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
+	        <div class="container-fluid">
+	            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+	                <ul class="navbar-nav">
+	                   <li class="nav-item">
+	                        <button class="btn" id="mainMenuBtn"> 메인 </button>
+	                    </li>
+	                    <li class="nav-item">
+	                        <button class="btn" id="bookMenuBtn"> 책 </button>
+	                    </li>
+	                    <li class="nav-item">
+	                        <button class="btn" id="testMenuBtn"> 테스트 </button>
+	                    </li>
+	                </ul>
+	            </div>
+	        </div>
+	    </nav>   --> 
+		<nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
+		  <div class="container-fluid">
+		     <button class="btn" id="mainMenuBtn"> 메인 </button>
+		    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
+		      <span class="navbar-toggler-icon"></span>
+		    </button>
+		    <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
+		      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+		        <li class="nav-item">
+		          <button class="btn" id="bookMenuBtn"> 책 </button>
+		        </li>
+		        <li class="nav-item">
+		           <button class="btn" id="testMenuBtn"> 테스트 </button>
+		        </li>
+		      </ul>
+		      <form class="d-flex">
+		        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+		        <button class="btn btn-outline-success" type="submit">Search</button>
+		      </form>
+		    </div>
+		  </div>
+		</nav>
     </head>
-
-    <!--네비게이션바 -->
-   <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <div class="container-fluid">
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav">
-                   <li class="nav-item">
-                        <button class="btn" id="mainMenuBtn"> 메인 </button>
-                    </li>
-                    <li class="nav-item">
-                        <button class="btn" id="bookMenuBtn"> 책 </button>
-                    </li>
-                    <li class="nav-item">
-                        <button class="btn" id="testMenuBtn"> 테스트 </button>
-                    </li>
-                </ul>
-            </div>
-        </div>
-    </nav> 
-
 <body>
