--- a/bookProject/src/main/resources/templates/index.html
+++ b/bookProject/src/main/resources/templates/index.html
@@ -1,5 +1,5 @@
 {{>fragments/header}} <!-- header inlucde-->
-<div class="container text-center main" id="main">
+<div class="text-center main" id="main" style="width:99%;">
 	
 </div>
 {{>fragments/footer}} <!-- footer inlucde-->
