--- a/bookProject/src/main/resources/templates/main/main.html
+++ b/bookProject/src/main/resources/templates/main/main.html
@@ -1,10 +1,10 @@
 
- <div class="mainDiv bg-dark">
-		test
+ <div class="border mainDiv">
+	<h1>DIV</h1>
  </div>
- <div class="mainDiv bg-secondary">
-		test
+ <div class="border mainDiv">
+	<h2>DIV 2</h2>
  </div>
- <div class="mainDiv bg-info">
-		test
+ <div class="border mainDiv">
+	<h2>DIV 3</h2>
  </div>  
