--- a/bookProject/src/main/resources/static/css/main/main.css
+++ b/bookProject/src/main/resources/static/css/main/main.css
@@ -2,13 +2,20 @@
 
 .mainDiv{
 	width:100%;
-	height:600px;
+	height:300px;
 }
 
 .main{
 	padding-left:18px;
 	width:1920px;
-	height:858px;
 	padding-top:70px;
-	padding-bottom:70px;
 }
+
+footer{
+    position: fixed;
+    width: 100%;
+    z-index: 1;
+    bottom: 0%;
+
+}
+
