--- a/bookProject/src/main/resources/templates/fragments/footer.html
+++ b/bookProject/src/main/resources/templates/fragments/footer.html
@@ -1,10 +1,8 @@
 		
 	<!-- 샘플 footer... -->	
-	<footer class="bg-light text-center text-lg-start fixed-bottom">
+	<footer class="bg-light text-center text-lg-star bg-secondary" style="height:50px;">
 	  <!-- Copyright -->
-	  <div class="text-center">
 	  	샘플 footer..
-	  </div>
 	  <!-- Copyright -->
 	</footer>
 
