--- a/bookProject/src/main/resources/templates/fragments/header.html
+++ b/bookProject/src/main/resources/templates/fragments/header.html
@@ -38,7 +38,7 @@
 		          <button class="btn" id="bookMenuBtn"> 책 </button>
 		        </li>
 		        <li class="nav-item">
-		           <button class="btn" id="testMenuBtn"> 테스트 </button>
+		           <button class="btn" id="boardMenuBtn"> 게시판 </button>
 		        </li>
 		      </ul>
 		      <form class="d-flex">
